# coinallocator

./: .gitignore  FONTS.md  LICENSE  PLAN.md  README.md  deploy.sh
contract/: Anchor.toml  Cargo.toml  Dockerfile.build  package-lock.json
contract/programs/coin_allocator/: Cargo.toml
contract/programs/coin_allocator/src/: error.rs  lib.rs  state.rs
contract/programs/coin_allocator/src/instructions/: claim.rs  close_split.rs  create_split.rs  distribute.rs  mod.rs
contracts/evm/: FundSplitter.sol  FundSplitterFactory.sol
contracts/sui/: Move.toml
contracts/sui/sources/: split.move
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: constants.ts  main.ts  router.ts  state.ts  types.ts
frontend/src/chain/: evm.ts  manager.ts  solana.ts  sui.ts  types.ts
frontend/src/components/: chain-selector.ts  nav.ts  toast.ts
frontend/src/evm/: abi.ts  networks.ts  program.ts
frontend/src/solana/: idl.ts  pda.ts  program.ts
frontend/src/styles/: components.css  configure.css  dashboard.css  deploy.css  fonts.css  landing.css  nav.css  reset.css  split-payment.css  variables.css  wallet.css
frontend/src/sui/: program.ts
frontend/src/utils/: dom.ts  fetch-split.ts  format.ts  labels.ts  stripe.ts  tx-history.ts  validation.ts
frontend/src/views/: configure.ts  dashboard.ts  deploy.ts  landing.ts  split-payment.ts
frontend/src/wallet/: adapter.ts  ui.ts
