[package]
name = "coin-allocator"
version = "0.1.0"
description = "Solana fund-splitting smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "coin_allocator"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"

